rs/ethexe/tests/snapshots/service_insta__works_with_extends.snap
---
source: rs/macros/ethexe/tests/service_insta.rs
expression: result
---
impl SomeService {
    pub fn do_this(&mut self) -> u32 {
        42
    }
}
pub struct SomeServiceExposure<T: sails_rs::gstd::services::Service> {
    message_id: sails_rs::MessageId,
    route: &'static [u8],
    #[cfg(not(target_arch = "wasm32"))]
    inner: Box<T>,
    #[cfg(not(target_arch = "wasm32"))]
    inner_ptr: *const T,
    #[cfg(target_arch = "wasm32")]
    inner: T,
    base: T::BaseExposures,
}
impl<T: sails_rs::gstd::services::Service> sails_rs::gstd::services::Exposure
for SomeServiceExposure<T> {
    fn message_id(&self) -> sails_rs::MessageId {
        self.message_id
    }
    fn route(&self) -> &'static [u8] {
        self.route
    }
}
impl SomeServiceExposure<SomeService> {
    pub fn do_this(&mut self) -> u32 {
        let exposure_scope = sails_rs::gstd::services::ExposureCallScope::new(self);
        self.inner.do_this()
    }
    pub fn as_base_0(
        &self,
    ) -> &<ExtendedService1 as sails_rs::gstd::services::Service>::Exposure {
        &self.base.0
    }
    pub fn as_base_1(
        &self,
    ) -> &<ExtendedService2 as sails_rs::gstd::services::Service>::Exposure {
        &self.base.1
    }
    pub async fn try_handle(&mut self, input: &[u8]) -> Option<(Vec<u8>, u128)> {
        use sails_rs::gstd::InvocationIo;
        if let Ok(request) = some_service_meta::__DoThisParams::decode_params(input) {
            let result = self.do_this();
            let value = 0u128;
            let output = some_service_meta::__DoThisParams::encode_reply(&result);
            return Some((output, value));
        }
        if let Some((output, value)) = self.base.0.try_handle(input).await {
            return Some((output, value));
        }
        if let Some((output, value)) = self.base.1.try_handle(input).await {
            return Some((output, value));
        }
        None
    }
    pub async fn try_handle_solidity(
        &mut self,
        method: &[u8],
        input: &[u8],
    ) -> Option<(Vec<u8>, u128)> {
        if method == &[24u8, 68u8, 111u8, 84u8, 104u8, 105u8, 115u8] {
            let (): () = sails_rs::alloy_sol_types::SolValue::abi_decode_params(
                    input,
                    false,
                )
                .expect("Failed to decode request");
            let result = self.do_this();
            let value = 0u128;
            return Some((
                sails_rs::alloy_sol_types::SolValue::abi_encode(&result),
                value,
            ));
        }
        if let Some((output, value)) = self
            .base
            .0
            .try_handle_solidity(method, input)
            .await
        {
            return Some((output, value));
        }
        if let Some((output, value)) = self
            .base
            .1
            .try_handle_solidity(method, input)
            .await
        {
            return Some((output, value));
        }
        None
    }
}
impl sails_rs::gstd::services::Service for SomeService {
    type Exposure = SomeServiceExposure<Self>;
    type BaseExposures = (
        <ExtendedService1 as sails_rs::gstd::services::Service>::Exposure,
        <ExtendedService2 as sails_rs::gstd::services::Service>::Exposure,
    );
    fn expose(
        self,
        message_id: sails_rs::MessageId,
        route: &'static [u8],
    ) -> Self::Exposure {
        #[cfg(not(target_arch = "wasm32"))]
        let inner_box = Box::new(self);
        #[cfg(not(target_arch = "wasm32"))]
        let inner = inner_box.as_ref();
        #[cfg(target_arch = "wasm32")]
        let inner = &self;
        Self::Exposure {
            message_id,
            route,
            base: (
                <ExtendedService1 as Clone>::clone(
                        AsRef::<ExtendedService1>::as_ref(inner),
                    )
                    .expose(message_id, route),
                <ExtendedService2 as Clone>::clone(
                        AsRef::<ExtendedService2>::as_ref(inner),
                    )
                    .expose(message_id, route),
            ),
            #[cfg(not(target_arch = "wasm32"))]
            inner_ptr: inner_box.as_ref() as *const Self,
            #[cfg(not(target_arch = "wasm32"))]
            inner: inner_box,
            #[cfg(target_arch = "wasm32")]
            inner: self,
        }
    }
}
impl sails_rs::meta::ServiceMeta for SomeService {
    type CommandsMeta = some_service_meta::CommandsMeta;
    type QueriesMeta = some_service_meta::QueriesMeta;
    type EventsMeta = some_service_meta::EventsMeta;
    const BASE_SERVICES: &'static [sails_rs::meta::AnyServiceMetaFn] = &[
        sails_rs::meta::AnyServiceMeta::new::<ExtendedService1>,
        sails_rs::meta::AnyServiceMeta::new::<ExtendedService2>,
    ];
}
mod some_service_meta {
    use super::*;
    use sails_rs::{Decode, TypeInfo};
    #[derive(Decode, TypeInfo)]
    #[codec(crate = sails_rs::scale_codec)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub struct __DoThisParams {}
    impl sails_rs::gstd::InvocationIo for __DoThisParams {
        const ROUTE: &'static [u8] = &[24u8, 68u8, 111u8, 84u8, 104u8, 105u8, 115u8];
        type Params = Self;
    }
    #[derive(TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum CommandsMeta {
        DoThis(__DoThisParams, u32),
    }
    #[derive(TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum QueriesMeta {}
    #[derive(TypeInfo)]
    #[scale_info(crate = sails_rs::scale_info)]
    pub enum NoEvents {}
    pub type EventsMeta = NoEvents;
}
impl sails_rs::solidity::ServiceSignature for SomeService {
    const METHODS: &'static [sails_rs::solidity::MethodRoute] = sails_rs::const_concat_slices!(
        < sails_rs::solidity::MethodRoute >, & [(sails_rs::concatcp!("do_this", <<
        (u128,) as sails_rs::alloy_sol_types::SolValue > ::SolType as
        sails_rs::alloy_sol_types::SolType > ::SOL_NAME,), & [24u8, 68u8, 111u8, 84u8,
        104u8, 105u8, 115u8] as & [u8],),], < ExtendedService1 as
        sails_rs::solidity::ServiceSignature > ::METHODS, < ExtendedService2 as
        sails_rs::solidity::ServiceSignature > ::METHODS
    );
}
